--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -223,35 +223,51 @@ Additional text can also be added to cards. this includes <code>card-date</code>
 
 ```
 
-### FS card text link
+### FS card default, no image
 
 <Canvas withSource="none">
-  <Story id="components-cards--fs-card-text-link" />
+  <Story id="components-cards--fs-card-default-no-image" />
 </Canvas>
 
 ```html
 
 ```
 
-### FS card no image
+### FS card default, no image, shaded
 
 <Canvas withSource="none">
-  <Story id="components-cards--fs-card-no-image" />
+  <Story id="components-cards--fs-card-default-no-image-shaded" />
 </Canvas>
 
 ```html
 
 ```
 
-### FS card no image shaded
+### FS card default, no image, button
 
 <Canvas withSource="none">
-  <Story id="components-cards--fs-card-no-image-shaded" />
+  <Story id="components-cards--fs-card-default-no-image-button" />
 </Canvas>
 
 ```html
 
 ```
+
+### FS card default, no image, button, shaded
+
+<Canvas withSource="none">
+  <Story id="components-cards--fs-card-default-no-image-button-shaded" />
+</Canvas>
+
+```html
+
+```
+
+
+
+
+
+
 
 ### FS card bordered
 
