default, story, event categories done

--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -92,7 +92,7 @@ The card component is used to provide a brief summary of content or a task, ofte
 
 
 
-### Default card layout
+### Default card layouts
 
 #### - One column
 
@@ -100,19 +100,11 @@ The card component is used to provide a brief summary of content or a task, ofte
   <Story id="components-cards--default-card-1-col" />
 </Canvas>
 
-```html
-
-```
-
 #### - Two column
 
 <Canvas withSource="none">
   <Story id="components-cards--default-card-2-col" />
 </Canvas>
-
-```html
-
-```
 
 #### - Three column
 
@@ -120,19 +112,11 @@ The card component is used to provide a brief summary of content or a task, ofte
   <Story id="components-cards--default-card-3-col" />
 </Canvas>
 
-```html
-
-```
-
 #### - Four column
 
 <Canvas withSource="none">
   <Story id="components-cards--default-card-4-col" />
 </Canvas>
-
-```html
-
-```
 
 
 
@@ -143,35 +127,78 @@ The card component is used to provide a brief summary of content or a task, ofte
 
 ## Variant examples
 
-### Card story
-
-#### - Card horizontal left
+### Story card
 
 <Canvas withSource="none">
-  <Story id="components-cards--fs-card-horizontal-left" />
+  <Story id="components-cards--story-card" />
 </Canvas>
 
 ```html
 
 ```
 
-#### - Card horizontal right
+### Story card layouts
+
+#### - One column
 
 <Canvas withSource="none">
-  <Story id="components-cards--fs-card-horizontal-right" />
+  <Story id="components-cards--story-card-1-col" />
+</Canvas>
+
+#### - Two column
+
+<Canvas withSource="none">
+  <Story id="components-cards--story-card-2-col" />
+</Canvas>
+
+#### - Three column
+
+<Canvas withSource="none">
+  <Story id="components-cards--story-card-3-col" />
+</Canvas>
+
+#### - Four column
+
+<Canvas withSource="none">
+  <Story id="components-cards--story-card-4-col" />
+</Canvas>
+
+
+
+
+
+### Event card
+
+<Canvas withSource="none">
+  <Story id="components-cards--event-card" />
 </Canvas>
 
 ```html
 
 ```
 
-### Card event
+### Event card layouts
+
+#### - One column
 
 <Canvas withSource="none">
-  <Story id="components-cards--fs-card-bordered" />
+  <Story id="components-cards--event-card-1-col" />
 </Canvas>
 
-```html
+#### - Two column
 
-```
+<Canvas withSource="none">
+  <Story id="components-cards--event-card-2-col" />
+</Canvas>
 
+#### - Three column
+
+<Canvas withSource="none">
+  <Story id="components-cards--event-card-3-col" />
+</Canvas>
+
+#### - Four column
+
+<Canvas withSource="none">
+  <Story id="components-cards--event-card-4-col" />
+</Canvas>
