--- a/packages/storybook-html/src/deliverables/uq-maps/uq-maps-3-wayfinding-controls.docs.mdx
+++ b/packages/storybook-html/src/deliverables/uq-maps/uq-maps-3-wayfinding-controls.docs.mdx
@@ -4,7 +4,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 # UQ Maps: wayfinding controls
 <StatusBadge.Development />
 
-## Initial state
+## 3A. Initial state
 
 What the wayfinding panel looks like when a user chooses to navigate to a
 location.
@@ -15,10 +15,10 @@ Use the HTML markup provided in the example below to apply the styles from the
 provided CSS.
 
 <Canvas withSource="open" withToolbar>
-  <Story height={240} id="deliverables-uq-maps-wayfinding-controls--wayfinding-control" />
+  <Story height={240} id="deliverables-uq-maps-3-wayfinding-controls--wayfinding-control" />
 </Canvas>
 
-## With circular progress indicator
+## 3B. With circular progress indicator
 
 ### Basic usage
 
@@ -28,7 +28,7 @@ scripted behaviour for the [*Material Design*][1] progress indicator. Please see
 code.
 
 <Canvas withSource="open" withToolbar>
-  <Story height={240} id="deliverables-uq-maps-wayfinding-controls--wayfinding-control-working" />
+  <Story height={240} id="deliverables-uq-maps-3-wayfinding-controls--wayfinding-control-working" />
 </Canvas>
 
 [1]: https://material.io/components/progress-indicators#circular-progress-indicators
