--- a/packages/storybook-html/src/deliverables/uq-maps/uq-maps-5-slide-drawer.docs.mdx
+++ b/packages/storybook-html/src/deliverables/uq-maps/uq-maps-5-slide-drawer.docs.mdx
@@ -4,7 +4,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 # UQ Maps: slide drawer
 <StatusBadge.Development />
 
-## Expanded
+## 5A. Expanded
 
 Should take up all available height and width of its parent container—on mobile,
 this should be the entire screen.
@@ -12,5 +12,5 @@ this should be the entire screen.
 ### Basic usage
 
 <Canvas withSource="open" withToolbar>
-  <Story height={600} id="deliverables-uq-maps-slide-drawer--expanded" />
+  <Story height={600} id="deliverables-uq-maps-5-slide-drawer--expanded" />
 </Canvas>
