--- a/packages/storybook-html/src/deliverables/uq-maps/uq-maps-6-app-info.docs.mdx
+++ b/packages/storybook-html/src/deliverables/uq-maps/uq-maps-6-app-info.docs.mdx
@@ -6,18 +6,20 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 Implements the *slide drawer* and *badge* to display app info.
 
-## Closed
+## Mobile
 
-### Basic usage
+### 6A. Closed
+
+#### Basic usage
 
 <Canvas withSource="open" withToolbar>
-  <Story height={400} id="deliverables-uq-maps-app-info-drawer--closed" />
+  <Story height={400} id="deliverables-uq-maps-6-app-info-drawer--closed" />
 </Canvas>
 
-## Open
+### 6B. Open
 
-### Basic usage
+#### Basic usage
 
 <Canvas withSource="open" withToolbar>
-  <Story height={400} id="deliverables-uq-maps-app-info-drawer--open" />
+  <Story height={400} id="deliverables-uq-maps-6-app-info-drawer--open" />
 </Canvas>
