--- a/packages/storybook-html/src/deliverables/uq-maps/uq-maps-intro.story.mdx
+++ b/packages/storybook-html/src/deliverables/uq-maps/uq-maps-intro.story.mdx
@@ -14,6 +14,7 @@ These are temporary installation & usage instructions; intended only for the
 ## Getting started
 
 1. [🔒 Download `@uqds/app-maps`][1]  
+   [🔒 Download `@uqds/button`][7]  
    **If you want to use the Sass files,** you will also need these package
    dependencies:
    - [🔒 Download `@uqds/core`][5]
@@ -74,7 +75,8 @@ request access.
 
 [1]: https://uq.sharepoint.com/teams/LmD6Nzqn/Shared%20Documents/Team%20Aqua/Applications/Uq%20Maps/Code/app-maps-1.0.0.tgz
 [2]: https://www.figma.com/file/MKgUvdM8E2jOwF80Qwg8Ha/UQ-Maps-Icon-Export?node-id=0%3A1
-[3]: /?path=/docs/deliverables-uq-maps-icons--ui
+[3]: /?path=/docs/deliverables-uq-maps-0-icons--ui
 [4]: https://sass-lang.com/dart-sass
 [5]: https://uq.sharepoint.com/teams/LmD6Nzqn/Shared%20Documents/Team%20Aqua/Applications/Uq%20Maps/Code/core-1.0.0.tgz
 [6]: https://uq.sharepoint.com/teams/LmD6Nzqn/Shared%20Documents/Team%20Aqua/Applications/Uq%20Maps/Code/body-1.0.0.tgz
+[7]: https://uq.sharepoint.com/teams/LmD6Nzqn/Shared%20Documents/Team%20Aqua/Applications/Uq%20Maps/Code/button-1.0.0.tgz
