--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -11,6 +11,11 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 The card component is used to provide a brief summary of content or a task, often with a link to more detail. Cards are frequently displayed alongside other cards to group related content or tasks.
 
+
+
+
+
+
 ## Default example
 
 ### Default card
@@ -20,11 +25,28 @@ The card component is used to provide a brief summary of content or a task, ofte
 </Canvas>
 
 ```html
-
+<div class="uq-card">
+  <a class="uq-card__link__outer" href="#">Card title</a>
+  <div class="uq-card__image__wrapper">
+    <div class="uq-card__image">
+      <img src="https://campuses.uq.edu.au/files/9492/stlucia-card.jpg" alt="Card image description">
+    </div>
+  </div>
+  <div class="uq-card__content__wrapper">
+    <div class="uq-card__content">
+      <div class="uq-card__header">
+        <h3 class="uq-card__title">Card title</h3>
+      </div>
+      <div class="uq-card__body">
+          <p>Card summary text</p>
+      </div>
+    </div>
+    <div class="uq-card__actions">
+      <a class="text--link" href="#">Learn more</a>
+    </div>
+  </div>
+</div>
 ```
-
-
-
 
 ### Default card variants
 
@@ -45,7 +67,8 @@ The card component is used to provide a brief summary of content or a task, ofte
 </Canvas>
 
 ```html
-
+<div class="uq-card uq-card--shaded">
+...
 ```
 
 #### - Without image, button
@@ -55,7 +78,15 @@ The card component is used to provide a brief summary of content or a task, ofte
 </Canvas>
 
 ```html
-
+<div class="uq-card">
+  ...
+  <div class="uq-card__content__wrapper">
+    ...
+    <div class="uq-card__actions">
+      <button class="uq-button uq-button--purple" href="#">Learn more</button>
+    </div>
+  </div>
+</div>
 ```
 
 #### - Without image, button, shaded
@@ -92,38 +123,6 @@ The card component is used to provide a brief summary of content or a task, ofte
 
 
 
-### Default card layouts
-
-#### - One column
-
-<Canvas withSource="none">
-  <Story id="components-cards--default-card-1-col" />
-</Canvas>
-
-#### - Two column
-
-<Canvas withSource="none">
-  <Story id="components-cards--default-card-2-col" />
-</Canvas>
-
-#### - Three column
-
-<Canvas withSource="none">
-  <Story id="components-cards--default-card-3-col" />
-</Canvas>
-
-#### - Four column
-
-<Canvas withSource="none">
-  <Story id="components-cards--default-card-4-col" />
-</Canvas>
-
-
-
-
-
-
-
 
 ## Variant examples
 
@@ -134,38 +133,26 @@ The card component is used to provide a brief summary of content or a task, ofte
 </Canvas>
 
 ```html
-
+<div class="uq-card uq-card--story">
+  <a class="uq-card__link__outer" href="#">Card title</a>
+  <div class="uq-card__image__wrapper">
+    <div class="uq-card__image">
+      <img src="https://campuses.uq.edu.au/files/9749/gatton-card2.jpg" alt="Card image description">
+    </div>
+  </div>
+  <div class="uq-card__content__wrapper">
+    <div class="uq-card__content">
+      <div class="uq-card__header">
+        <p class="uq-card__title__super uq-card__title__super--grey">SUB-TITLE</p>
+        <h3 class="uq-card__title">Card title</h3>
+      </div>
+    </div>
+    <div class="uq-card__actions">
+      <p>3 min read</p>
+    </div>
+  </div>
+</div>
 ```
-
-### Story card layouts
-
-#### - One column
-
-<Canvas withSource="none">
-  <Story id="components-cards--story-card-1-col" />
-</Canvas>
-
-#### - Two column
-
-<Canvas withSource="none">
-  <Story id="components-cards--story-card-2-col" />
-</Canvas>
-
-#### - Three column
-
-<Canvas withSource="none">
-  <Story id="components-cards--story-card-3-col" />
-</Canvas>
-
-#### - Four column
-
-<Canvas withSource="none">
-  <Story id="components-cards--story-card-4-col" />
-</Canvas>
-
-
-
-
 
 ### Event card
 
@@ -174,31 +161,169 @@ The card component is used to provide a brief summary of content or a task, ofte
 </Canvas>
 
 ```html
-
+<div class="uq-card uq-card--event">
+  <a class="uq-card__link__outer" href="#">Card title</a>
+  <div class="uq-card__image__wrapper">
+    <div class="uq-card__image">
+      <img src="https://campuses.uq.edu.au/files/9480/herston-card.jpg" alt="Card image description">
+    </div>
+  </div>
+  <div class="uq-card__content__wrapper">
+    <div class="uq-card__content">
+      <div class="uq-card__header">
+        <p class="uq-card__title__super">DD MONTH</p>
+        <h3 class="uq-card__title">Card title</h3>
+      </div>
+    </div>
+    <div class="uq-card__actions">
+      <p>Online</p>
+    </div>
+  </div>
+</div>
 ```
+
+
+
+
+
+
+## Layouts
+
+### Default card layouts
+
+#### - 1 col
+
+<Canvas withSource="none">
+  <Story id="components-cards--default-card-1-col" />
+</Canvas>
+
+#### - 2 col
+
+<Canvas withSource="none">
+  <Story id="components-cards--default-card-2-col" />
+</Canvas>
+
+#### - 3 col
+
+<Canvas withSource="none">
+  <Story id="components-cards--default-card-3-col" />
+</Canvas>
+
+#### - 4 col
+
+<Canvas withSource="none">
+  <Story id="components-cards--default-card-4-col" />
+</Canvas>
+
+
+
+
+### Story card layouts
+
+#### - 1 col
+
+<Canvas withSource="none">
+  <Story id="components-cards--story-card-1-col" />
+</Canvas>
+
+#### - 2 col
+
+<Canvas withSource="none">
+  <Story id="components-cards--story-card-2-col" />
+</Canvas>
+
+#### - 3 col
+
+<Canvas withSource="none">
+  <Story id="components-cards--story-card-3-col" />
+</Canvas>
+
+#### - 4 col
+
+<Canvas withSource="none">
+  <Story id="components-cards--story-card-4-col" />
+</Canvas>
+
+
 
 ### Event card layouts
 
-#### - One column
+#### - 1 col
 
 <Canvas withSource="none">
   <Story id="components-cards--event-card-1-col" />
 </Canvas>
 
-#### - Two column
+#### - 2 col
 
 <Canvas withSource="none">
   <Story id="components-cards--event-card-2-col" />
 </Canvas>
 
-#### - Three column
+#### - 3 col
 
 <Canvas withSource="none">
   <Story id="components-cards--event-card-3-col" />
 </Canvas>
 
-#### - Four column
+#### - 4 col
 
 <Canvas withSource="none">
   <Story id="components-cards--event-card-4-col" />
 </Canvas>
+
+
+
+
+
+## How & when to use
+
+<table className="uqds-table  uqds-table--card uqds-table--colour">
+  <tbody className="uqds-table__body">
+    <tr className="uqds-table__mobile-heading">
+      <th className="uqds-table__heading" width="20%">Viewport</th>
+      <th className="uqds-table__heading" width="20%">Number of columns</th>
+      <th className="uqds-table__heading" width="20%">Default card</th>
+      <th className="uqds-table__heading" width="20%">Story card</th>
+      <th className="uqds-table__heading" width="20%">Event card</th>
+    </tr>
+    <tr className="uqds-table__row">
+      <th className="uqds-table__mobile-heading" data-title="Viewport">Desktop</th>
+      <th className="uqds-table__mobile-heading" data-title="Number of columns">1 col</th>
+      <td className="uqds-table__item" data-title="Default card">Align image & content: <br /> horizontal</td>
+      <td className="uqds-table__item" data-title="Story card">Align image & content: <br /> horizontal</td>
+      <td className="uqds-table__item" data-title="Event card">Align image & content: <br /> horizontal</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <th className="uqds-table__mobile-heading" data-title="Viewport">Desktop</th>
+      <th className="uqds-table__mobile-heading" data-title="Number of columns">2,3,4 col</th>
+      <td className="uqds-table__item" data-title="Default card">Align image & content: <br /> vertical</td>
+      <td className="uqds-table__item" data-title="Story card">Align image & content: <br /> vertical</td>
+      <td className="uqds-table__item" data-title="Event card">Align image & content: <br /> vertical</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <th className="uqds-table__mobile-heading" data-title="Viewport">Mobile</th>
+      <th className="uqds-table__mobile-heading" data-title="Number of columns">1,2 col</th>
+      <td className="uqds-table__item" data-title="Default card">Align image & content: <br /> vertical ~</td>
+      <td className="uqds-table__item" data-title="Story card">Align image & content: <br /> vertical ~</td>
+      <td className="uqds-table__item" data-title="Event card">Align image & content: <br /> vertical ~</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <th className="uqds-table__mobile-heading" data-title="Viewport">Mobile</th>
+      <th className="uqds-table__mobile-heading" data-title="Number of columns">3,4 col</th>
+      <td className="uqds-table__item" data-title="Default card">Align image & content: <br /> vertical ~</td>
+      <td className="uqds-table__item" data-title="Story card">Align image & content: <br /> list **</td>
+      <td className="uqds-table__item" data-title="Event card">Align image & content: <br /> list **</td>
+    </tr>
+  </tbody>
+</table>
+
+### Special rules
+
+~ On smaller viewports, image height is reduced to 190px for 1,2 column story/event cards and 1,2,3,4 column default cards. <br />
+** On smaller viewports, image height remain fixed at 98px for story/event cards.
+
+## Accessibility
+
+- With keyboard accessibility, tabbing takes the user through the links in the card.
+- With assistive technologies like screen readers, it reads out the heading level, title, text and links in the card.
