--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -73,6 +73,8 @@ The card component is used to provide a brief summary of content or a task, ofte
 
 #### - Without image, button
 
+Button variants are restricted to purple and it's outline version.
+
 <Canvas withSource="none">
   <Story id="components-cards--default-card-no-image-button" />
 </Canvas>
@@ -128,6 +130,8 @@ The card component is used to provide a brief summary of content or a task, ofte
 
 ### Story card
 
+For story card, the sub-title is grey in colour, 16px, normal weight 400 and is placed above the card title.
+
 <Canvas withSource="none">
   <Story id="components-cards--story-card" />
 </Canvas>
@@ -155,6 +159,8 @@ The card component is used to provide a brief summary of content or a task, ofte
 ```
 
 ### Event card
+
+For event card, the sub-title is purple-light in colour, 16px, medium weight 500 and is placed above the card title.
 
 <Canvas withSource="none">
   <Story id="components-cards--event-card" />
@@ -288,29 +294,29 @@ The card component is used to provide a brief summary of content or a task, ofte
       <th className="uqds-table__heading" width="20%">Event card</th>
     </tr>
     <tr className="uqds-table__row">
-      <th className="uqds-table__mobile-heading" data-title="Viewport">Desktop</th>
-      <th className="uqds-table__mobile-heading" data-title="Number of columns">1 col</th>
+      <td className="uqds-table__item" data-title="Viewport">Desktop</td>
+      <td className="uqds-table__item" data-title="Number of columns">1 col</td>
       <td className="uqds-table__item" data-title="Default card">Align image & content: <br /> horizontal</td>
       <td className="uqds-table__item" data-title="Story card">Align image & content: <br /> horizontal</td>
       <td className="uqds-table__item" data-title="Event card">Align image & content: <br /> horizontal</td>
     </tr>
     <tr className="uqds-table__row">
-      <th className="uqds-table__mobile-heading" data-title="Viewport">Desktop</th>
-      <th className="uqds-table__mobile-heading" data-title="Number of columns">2,3,4 col</th>
+      <td className="uqds-table__item" data-title="Viewport">Desktop</td>
+      <td className="uqds-table__item" data-title="Number of columns">2,3,4 col</td>
       <td className="uqds-table__item" data-title="Default card">Align image & content: <br /> vertical</td>
       <td className="uqds-table__item" data-title="Story card">Align image & content: <br /> vertical</td>
       <td className="uqds-table__item" data-title="Event card">Align image & content: <br /> vertical</td>
     </tr>
     <tr className="uqds-table__row">
-      <th className="uqds-table__mobile-heading" data-title="Viewport">Mobile</th>
-      <th className="uqds-table__mobile-heading" data-title="Number of columns">1,2 col</th>
+      <td className="uqds-table__item" data-title="Viewport">Mobile</td>
+      <td className="uqds-table__item" data-title="Number of columns">1,2 col</td>
       <td className="uqds-table__item" data-title="Default card">Align image & content: <br /> vertical ~</td>
       <td className="uqds-table__item" data-title="Story card">Align image & content: <br /> vertical ~</td>
       <td className="uqds-table__item" data-title="Event card">Align image & content: <br /> vertical ~</td>
     </tr>
     <tr className="uqds-table__row">
-      <th className="uqds-table__mobile-heading" data-title="Viewport">Mobile</th>
-      <th className="uqds-table__mobile-heading" data-title="Number of columns">3,4 col</th>
+      <td className="uqds-table__item" data-title="Viewport">Mobile</td>
+      <td className="uqds-table__item" data-title="Number of columns">3,4 col</td>
       <td className="uqds-table__item" data-title="Default card">Align image & content: <br /> vertical ~</td>
       <td className="uqds-table__item" data-title="Story card">Align image & content: <br /> list **</td>
       <td className="uqds-table__item" data-title="Event card">Align image & content: <br /> list **</td>
