doc text additions

--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -10,11 +10,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 ## Overview
 
 The card component is used to provide a brief summary of content or a task, often with a link to more detail. Cards are frequently displayed alongside other cards to group related content or tasks.
-
-
-
-
-
+The height of the cards in a group all equalises by default. 
 
 ## Default example
 
@@ -121,11 +117,6 @@ Button variants are restricted to purple and it's outline version.
 
 ```
 
-
-
-
-
-
 ## Variant examples
 
 ### Story card
@@ -188,11 +179,6 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
 </div>
 ```
 
-
-
-
-
-
 ## Layouts
 
 ### Default card layouts
@@ -221,9 +207,6 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
   <Story id="components-cards--default-card-4-col" />
 </Canvas>
 
-
-
-
 ### Story card layouts
 
 #### - 1 col
@@ -250,8 +233,6 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
   <Story id="components-cards--story-card-4-col" />
 </Canvas>
 
-
-
 ### Event card layouts
 
 #### - 1 col
@@ -277,10 +258,6 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
 <Canvas withSource="none">
   <Story id="components-cards--event-card-4-col" />
 </Canvas>
-
-
-
-
 
 ## How & when to use
 
